@@ -2429,6 +2429,7 @@ Parameters : (rustticks=#ticks) (lightningticks=#ticks) (rumbleticks=#ticks)\n\r
 Parameters : (gustticks=#ticks) (tornadoticks=#ticks) (hailticks=#ticks)\n\r\
 Parameters : (dustticks=#ticks)\n\r\
 Parameters : (weather=[weather name]) (skyweather=[weather name])\n\r\
+Parameters : (shipdmgpct=[formula]) (shipdmg=[formula]) (dmgname="[NAME]")\n\r\
 Example    : windsheer=10 puddlepct=20\n\r\
 Description: \n\r\
 The amazingly powerful behavior handles almost all of the effects of weather upon \
@@ -2464,7 +2465,14 @@ tornadoticks - how often, in ticks, during thunderstorms and windy conditions, a
 weather - forces the given weather affects, even indoors. Weather codes include:\n\r\
    "CLEAR","CLOUDY","WINDY","RAIN","THUNDERSTORM","SNOW","HAIL","HEAT","SLEET",\n\r\
    "BLIZZARD","DUST","DROUGHT","COLD","FOG"\n\r\
-skyweather - forces the given weather affects, only outdoors. Weather codes above.
+skyweather - forces the given weather affects, only outdoors. Weather codes above.\n\r\
+shipdmgpct - adds a chance (0-100) for a ship/boat passing through to take damage.\n\r\
+   See help on FORMULA.  Variables include:\n\r\
+     @x1 - number of rooms in ship, with boats = 0\n\r\
+     @x2 - wind level (0, 1, or 2)\n\r\
+     @x3 - wet level (0, 1 rain, 2 storm, 3 storm+wet) \n\r\
+shipdmg - amount of damage to ship/boat passing through. Variables as shipdmgpct.\n\r\
+dmgname - if shipdmg is taken, from what source? give it a string name.
 
 BEHAVIOR_WIMPY=\
 Behavior   : Wimpy\n\r\
