@@ -954,7 +954,9 @@ The formulas can be anything from a simple number, to numbers combined with math
 \n\r\
 One special operator, ? , is for generating a random number (ex: 2?5 refers to a random number \
 between 2 and 5).  Another special operator, >, is for bounding the result of an operation \
-(ex: 5 * 10 > 10 will evaluate to the greater of 10 or 5 * 10.  The < operator does the opposite.
+(ex: 5 * 10 > 10 will evaluate to the greater of 10 or 5 * 10).  The < operator does the opposite. \
+The last special operators are =, which evaluates to 1 if values on either side are the same, and \
+!, which evaluates to 1 if values on either side are different.
 
 ARCHON_STAFF=ARCHONSTAFF
 A_WOODEN_STAFF=ARCHONSTAFF
