@@ -24,7 +24,8 @@
  23. WillQualify and Qualify commands now have UNIQUE argument.
  24. New INI entry: XPMOD, and changes to Prop_ModExperience also.
  25. Common Account menu now configurable (help/acctmenu.txt)
- 26. New forum posts now support attachments. 
+ 26. New forum posts now support attachments.
+ 27. WeatherAffects behavior can now be more independent of the actual weather.
 
 # Build 5.10.1 Release 1/01/2023
   1. FasterRecovery expanded and new char stat REJUVRATE for Prop*Adjuster
